<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:backgroundTint="@color/primary"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="10dp"
    android:layout_marginHorizontal="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_pet_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@+id/iv_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_photo"
            tools:text="@string/pet_name" />

        <TextView
            android:id="@+id/tv_pet_type"
            style="@style/tersierColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            card_view:layout_constraintStart_toStartOf="@+id/tv_pet_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_pet_name"
            tools:text="@string/pet_type" />

        <ImageView
            android:id="@+id/maps_icon"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_location"
            card_view:layout_constraintBottom_toBottomOf="@+id/tv_range"
            card_view:layout_constraintEnd_toStartOf="@+id/tv_range"
            card_view:layout_constraintTop_toTopOf="@+id/tv_range" />

        <TextView
            android:id="@+id/tv_range"
            style="@style/tersierColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_pet_type"
            tools:text="@string/distance" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>