<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.profile.AccountFragment">

    <TextView
        android:id="@+id/textView3"
        style="@style/primaryColor.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile_tab"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/primary"
        app:cardCornerRadius="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_cat_icon"
                android:layout_width="92dp"
                android:layout_height="122dp"
                android:src="@drawable/cat_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.535" />

            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="Hello,"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/profile_cat_icon"
                app:layout_constraintTop_toTopOf="@+id/profile_cat_icon" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/primaryColor.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholeder"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_hello"
                app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_email"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/email_placeholder"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/iv_email"
                app:layout_constraintStart_toEndOf="@+id/iv_email"
                app:layout_constraintTop_toTopOf="@+id/iv_email" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:padding="5dp"
                android:text="@string/edit_profile"
                android:textColor="@color/primary"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/iv_email"
                app:layout_constraintTop_toBottomOf="@+id/iv_email" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/light_red"
                android:padding="0dp"
                android:src="@drawable/ic_logout"
                app:layout_constraintStart_toEndOf="@+id/btn_edit"
                app:layout_constraintTop_toTopOf="@+id/btn_edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView4"
                style="@style/primaryColor.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_pets_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/horizontal_line"
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/primary"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorite_pets"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_row_favorite_pets" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>